# Procyl

./: .gitignore  README.md  build.bat  build.sh  pyproject.toml  verify.py
.github/workflows/: release.yml
doc/: API.md  CHANGELOG_v1.md  DEVELOPMENT.md  MIGRATION_v1.md  README.md  RELEASE_NOTES_v1.md
examples/: README.md  demo.py  dependency_detection.py  parallel_data_processing.py  parallel_workers.py  runtime_worker.py  threaded_compile.py  timeout_handling.py  version_constraints.py  web_scraping.py  worker_verification.py
src/procyl/: __init__.py  core.py  dependencies.py  environment.py  runner.py  worker.py
tests/: test_core.py  test_dependencies.py  test_multiprocessing.py
