[project]
name = "procyl"
version = "0.1.0"
description = "Lightweight Python execution layer for managing isolated workers as named tasks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "yolezz" }
]


dependencies = []


[project.urls]
"Homepage" = "https://github.com/yo-le-zz/Procyl"
"Source" = "https://github.com/yo-le-zz/Procyl"

[project.scripts]
procyl = "procyl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"