[project]
name = "procyl"
version = "0.1.1"
description = "A lightweight worker system for creating, compiling, running, and managing Python-based processes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "yolezz" }
]

dependencies = []

[project.optional-dependencies]
compile = [
    "nuitka>=2.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


[project.urls]
"Homepage" = "https://github.com/yo-le-zz/Procyl"
"Source" = "https://github.com/yo-le-zz/Procyl"

[project.scripts]
procyl = "procyl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"